Reduce font size on smaller screens should fix #2

--- a/public/css/vroom.css
+++ b/public/css/vroom.css
@@ -101,3 +101,13 @@
 #chatMenu {
   margin-bottom: 15px;
 }
+@media screen and (max-width: 480px) {
+  body {
+    font-size: 0.8em;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 0.9em;
+  }
+}
